// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipe card add extra meal view should match snapshot correctly with Add extra meal button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bdnylx gccBOx"
      >
        <div
          class="sc-bdnylx bZyySU"
          height="0"
          overflow="hidden"
        >
          <img
            alt="Steak & Shrimp in a Creamy Thyme Sauce"
            src="https://img.hellofresh.com/c_fill,f_auto,fl_lossy,h_405,q_auto,w_720/hellofresh_s3/image/steak-shrimp-in-a-creamy-thyme-sauce-12478c6a.jpg"
            width="100%"
          />
        </div>
        <div
          class="sc-bdnylx ksClEu"
          height="120px"
        >
          <div
            class="sc-eCApGN gsoVNo"
            font-family="primary"
            font-size="md"
            font-weight="bold"
          >
            Steak & Shrimp in a Creamy Thyme Sauce
          </div>
          <div
            class="sc-eCApGN kWxwPa"
            font-family="secondary"
            font-size="sm"
            font-weight="regular"
          >
            with Zesty Roasted Green Beans & Crispy-Onion-Topped Mashed Potatoes
          </div>
        </div>
        <div
          class="sc-bdnylx sc-dlnjPT jAJxLH"
          display="flex"
        >
          <div
            class="sc-bdnylx fqNRAk"
          >
            <div
              aria-label="Extra charge"
              class="sc-eCApGN kRAlbB"
              color="primary_600"
            >
              +
              $11.98
            </div>
          </div>
          <div
            class="sc-bdnylx hCkeme"
          >
            <button
              aria-label="Add Steak & Shrimp in a Creamy Thyme Sauce to your hello fresh box"
              class="sc-gtssRu kSeqjR"
              width="100%"
            >
              Add extra meal
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdnylx gccBOx"
    >
      <div
        class="sc-bdnylx bZyySU"
        height="0"
        overflow="hidden"
      >
        <img
          alt="Steak & Shrimp in a Creamy Thyme Sauce"
          src="https://img.hellofresh.com/c_fill,f_auto,fl_lossy,h_405,q_auto,w_720/hellofresh_s3/image/steak-shrimp-in-a-creamy-thyme-sauce-12478c6a.jpg"
          width="100%"
        />
      </div>
      <div
        class="sc-bdnylx ksClEu"
        height="120px"
      >
        <div
          class="sc-eCApGN gsoVNo"
          font-family="primary"
          font-size="md"
          font-weight="bold"
        >
          Steak & Shrimp in a Creamy Thyme Sauce
        </div>
        <div
          class="sc-eCApGN kWxwPa"
          font-family="secondary"
          font-size="sm"
          font-weight="regular"
        >
          with Zesty Roasted Green Beans & Crispy-Onion-Topped Mashed Potatoes
        </div>
      </div>
      <div
        class="sc-bdnylx sc-dlnjPT jAJxLH"
        display="flex"
      >
        <div
          class="sc-bdnylx fqNRAk"
        >
          <div
            aria-label="Extra charge"
            class="sc-eCApGN kRAlbB"
            color="primary_600"
          >
            +
            $11.98
          </div>
        </div>
        <div
          class="sc-bdnylx hCkeme"
        >
          <button
            aria-label="Add Steak & Shrimp in a Creamy Thyme Sauce to your hello fresh box"
            class="sc-gtssRu kSeqjR"
            width="100%"
          >
            Add extra meal
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Recipe card default view should match snapshot correctly with Add button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bdnylx gccBOx"
      >
        <div
          class="sc-bdnylx bZyySU"
          height="0"
          overflow="hidden"
        >
          <img
            alt="Steak & Shrimp in a Creamy Thyme Sauce"
            src="https://img.hellofresh.com/c_fill,f_auto,fl_lossy,h_405,q_auto,w_720/hellofresh_s3/image/steak-shrimp-in-a-creamy-thyme-sauce-12478c6a.jpg"
            width="100%"
          />
        </div>
        <div
          class="sc-bdnylx ksClEu"
          height="120px"
        >
          <div
            class="sc-eCApGN gsoVNo"
            font-family="primary"
            font-size="md"
            font-weight="bold"
          >
            Steak & Shrimp in a Creamy Thyme Sauce
          </div>
          <div
            class="sc-eCApGN kWxwPa"
            font-family="secondary"
            font-size="sm"
            font-weight="regular"
          >
            with Zesty Roasted Green Beans & Crispy-Onion-Topped Mashed Potatoes
          </div>
        </div>
        <div
          class="sc-bdnylx sc-dlnjPT jAJxLH"
          display="flex"
        >
          <div
            class="sc-bdnylx fqNRAk"
          >
            <div
              aria-label="Extra charge"
              class="sc-eCApGN kRAlbB"
              color="primary_600"
            >
              +
              $11.98
            </div>
          </div>
          <div
            class="sc-bdnylx hCkeme"
          >
            <button
              aria-label="Add Steak & Shrimp in a Creamy Thyme Sauce to your hello fresh box"
              class="sc-gtssRu kSeqjR"
              width="100%"
            >
              Add
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdnylx gccBOx"
    >
      <div
        class="sc-bdnylx bZyySU"
        height="0"
        overflow="hidden"
      >
        <img
          alt="Steak & Shrimp in a Creamy Thyme Sauce"
          src="https://img.hellofresh.com/c_fill,f_auto,fl_lossy,h_405,q_auto,w_720/hellofresh_s3/image/steak-shrimp-in-a-creamy-thyme-sauce-12478c6a.jpg"
          width="100%"
        />
      </div>
      <div
        class="sc-bdnylx ksClEu"
        height="120px"
      >
        <div
          class="sc-eCApGN gsoVNo"
          font-family="primary"
          font-size="md"
          font-weight="bold"
        >
          Steak & Shrimp in a Creamy Thyme Sauce
        </div>
        <div
          class="sc-eCApGN kWxwPa"
          font-family="secondary"
          font-size="sm"
          font-weight="regular"
        >
          with Zesty Roasted Green Beans & Crispy-Onion-Topped Mashed Potatoes
        </div>
      </div>
      <div
        class="sc-bdnylx sc-dlnjPT jAJxLH"
        display="flex"
      >
        <div
          class="sc-bdnylx fqNRAk"
        >
          <div
            aria-label="Extra charge"
            class="sc-eCApGN kRAlbB"
            color="primary_600"
          >
            +
            $11.98
          </div>
        </div>
        <div
          class="sc-bdnylx hCkeme"
        >
          <button
            aria-label="Add Steak & Shrimp in a Creamy Thyme Sauce to your hello fresh box"
            class="sc-gtssRu kSeqjR"
            width="100%"
          >
            Add
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Recipe card quantity button view should match snapshot correctly with increase and decrease quantity button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bdnylx cDgClw"
      >
        <div
          class="sc-bdnylx bZyySU"
          height="0"
          overflow="hidden"
        >
          <img
            alt="Steak & Shrimp in a Creamy Thyme Sauce"
            src="https://img.hellofresh.com/c_fill,f_auto,fl_lossy,h_405,q_auto,w_720/hellofresh_s3/image/steak-shrimp-in-a-creamy-thyme-sauce-12478c6a.jpg"
            width="100%"
          />
        </div>
        <div
          class="sc-bdnylx ksClEu"
          height="120px"
        >
          <div
            class="sc-eCApGN gsoVNo"
            font-family="primary"
            font-size="md"
            font-weight="bold"
          >
            Steak & Shrimp in a Creamy Thyme Sauce
          </div>
          <div
            class="sc-eCApGN kWxwPa"
            font-family="secondary"
            font-size="sm"
            font-weight="regular"
          >
            with Zesty Roasted Green Beans & Crispy-Onion-Topped Mashed Potatoes
          </div>
        </div>
        <div
          class="sc-bdnylx sc-dlnjPT gKxRuq"
          display="flex"
        >
          <button
            aria-label="Decrease quantity of Steak & Shrimp in a Creamy Thyme Sauce"
            class="sc-jSFkmK eHNmvr"
            title="Decrease quantity of Steak & Shrimp in a Creamy Thyme Sauce"
          >
            <svg
              class="sc-hKFyIo ggweEv"
              height="24"
              viewBox="0 0 32 32"
              width="24"
            >
              <path
                d="M16 3c7.18 0 13 5.82 13 13s-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3zm0 1.5C9.649 4.5 4.5 9.649 4.5 16S9.649 27.5 16 27.5 27.5 22.351 27.5 16 22.351 4.5 16 4.5zM22 15v2H10v-2h12z"
              />
            </svg>
          </button>
          <div
            class="sc-bdnylx kwhRwX"
            color="white"
          >
            <div
              class="sc-eCApGN iBCCQJ"
              font-family="secondary"
              font-size="md"
              font-weight="bold"
            >
              3
               in your box
            </div>
            <div
              class="sc-eCApGN eoOXgE"
              font-family="secondary"
              font-size="sm"
            >
              (
              6
               servings)
            </div>
          </div>
          <button
            aria-label="Increase quantity of Steak & Shrimp in a Creamy Thyme Sauce"
            class="sc-jSFkmK eHNmvr"
            title="Increase quantity of Steak & Shrimp in a Creamy Thyme Sauce"
          >
            <svg
              class="sc-hKFyIo ggweEv"
              height="24"
              viewBox="0 0 32 32"
              width="24"
            >
              <path
                d="M16 3c7.18 0 13 5.82 13 13s-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3zm0 1.5C9.649 4.5 4.5 9.649 4.5 16S9.649 27.5 16 27.5 27.5 22.351 27.5 16 22.351 4.5 16 4.5zm1 5.5v5h5v2h-5v5h-2v-5h-5v-2h5v-5h2z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdnylx cDgClw"
    >
      <div
        class="sc-bdnylx bZyySU"
        height="0"
        overflow="hidden"
      >
        <img
          alt="Steak & Shrimp in a Creamy Thyme Sauce"
          src="https://img.hellofresh.com/c_fill,f_auto,fl_lossy,h_405,q_auto,w_720/hellofresh_s3/image/steak-shrimp-in-a-creamy-thyme-sauce-12478c6a.jpg"
          width="100%"
        />
      </div>
      <div
        class="sc-bdnylx ksClEu"
        height="120px"
      >
        <div
          class="sc-eCApGN gsoVNo"
          font-family="primary"
          font-size="md"
          font-weight="bold"
        >
          Steak & Shrimp in a Creamy Thyme Sauce
        </div>
        <div
          class="sc-eCApGN kWxwPa"
          font-family="secondary"
          font-size="sm"
          font-weight="regular"
        >
          with Zesty Roasted Green Beans & Crispy-Onion-Topped Mashed Potatoes
        </div>
      </div>
      <div
        class="sc-bdnylx sc-dlnjPT gKxRuq"
        display="flex"
      >
        <button
          aria-label="Decrease quantity of Steak & Shrimp in a Creamy Thyme Sauce"
          class="sc-jSFkmK eHNmvr"
          title="Decrease quantity of Steak & Shrimp in a Creamy Thyme Sauce"
        >
          <svg
            class="sc-hKFyIo ggweEv"
            height="24"
            viewBox="0 0 32 32"
            width="24"
          >
            <path
              d="M16 3c7.18 0 13 5.82 13 13s-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3zm0 1.5C9.649 4.5 4.5 9.649 4.5 16S9.649 27.5 16 27.5 27.5 22.351 27.5 16 22.351 4.5 16 4.5zM22 15v2H10v-2h12z"
            />
          </svg>
        </button>
        <div
          class="sc-bdnylx kwhRwX"
          color="white"
        >
          <div
            class="sc-eCApGN iBCCQJ"
            font-family="secondary"
            font-size="md"
            font-weight="bold"
          >
            3
             in your box
          </div>
          <div
            class="sc-eCApGN eoOXgE"
            font-family="secondary"
            font-size="sm"
          >
            (
            6
             servings)
          </div>
        </div>
        <button
          aria-label="Increase quantity of Steak & Shrimp in a Creamy Thyme Sauce"
          class="sc-jSFkmK eHNmvr"
          title="Increase quantity of Steak & Shrimp in a Creamy Thyme Sauce"
        >
          <svg
            class="sc-hKFyIo ggweEv"
            height="24"
            viewBox="0 0 32 32"
            width="24"
          >
            <path
              d="M16 3c7.18 0 13 5.82 13 13s-5.82 13-13 13S3 23.18 3 16 8.82 3 16 3zm0 1.5C9.649 4.5 4.5 9.649 4.5 16S9.649 27.5 16 27.5 27.5 22.351 27.5 16 22.351 4.5 16 4.5zm1 5.5v5h5v2h-5v5h-2v-5h-5v-2h5v-5h2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
